--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-344.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-562.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-218.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
   - {name: 🇫🇷 法国-407.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-354.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-377.3KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-749.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-344.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-562.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-377.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-218.1KB/s(Youtube:不良林)
       - 🇫🇷 法国-407.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-377.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-749.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
