--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-919.2KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-220.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-223.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-997.1KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-558.1KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-630.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-560.7KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-919.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-220.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-223.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-997.1KB/s(Youtube:不良林)
+      - 🇬🇧 英国-558.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-630.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-560.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
