--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -9,6 +9,7 @@ proxies:
   - {name: 🇨🇦 加拿大-729.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-921.2KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇬🇧 英国-799.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -19,6 +20,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,6 +30,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,6 +41,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,6 +56,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -61,6 +66,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -71,6 +77,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -90,6 +97,7 @@ proxy-groups:
       - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
