--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-190.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-729.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-921.2KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: 36.139.154.162, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 37991120-21c6-41e2-a557-8115b9983386}
+  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: 36.139.154.17, port: 45324, type: ss, cipher: chacha20-ietf-poly1305, password: 37991120-21c6-41e2-a557-8115b9983386}
   - {name: 🇬🇧 英国-799.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-7.77MB/s(Youtube:不良林), server: 36.134.116.212, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 0489fad1-e23d-4f47-b759-ddc4d4122498}
+  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 120.233.7.221, port: 32006, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 120.233.7.221, port: 18007, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 36.139.115.52, port: 11208, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-729.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-921.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-341.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-799.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
