--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.60MB/s(Youtube:不良林), server: 36.139.154.162, port: 45183, type: ss, cipher: chacha20-ietf-poly1305, password: 37991120-21c6-41e2-a557-8115b9983386}
-  - {name: 🇨🇳 中国-7.77MB/s(Youtube:不良林), server: 36.134.116.212, port: 45240, type: ss, cipher: chacha20-ietf-poly1305, password: 0489fad1-e23d-4f47-b759-ddc4d4122498}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 36.139.115.52, port: 11208, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: 120.233.7.221, port: 18007, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-523.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-961.7KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-377.2KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-313.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.58MB/s(Youtube:不良林), server: 36.139.115.52, port: 11208, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 36.139.154.17, port: 45324, type: ss, cipher: chacha20-ietf-poly1305, password: 37991120-21c6-41e2-a557-8115b9983386}
+  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-434.8KB/s(Youtube:不良林), server: 42.3.19.58, port: 39999, type: vmess, uuid: 21dcbec8-eee8-3d20-82b6-f8c16fe6dc8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
-      - 🇫🇷 法国-523.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-961.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-313.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.58MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
+      - 🇭🇰 香港-434.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
